Resolucion cambiada, detalles de interfaz

--- a/app_documento/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app_documento/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,6 +35,9 @@
 @background_color : rgba(128,0,0,1);
 @linkColor: #000;
 
+@gridColumnWidth1200 : 60px;
+@gridGutterWidth1200 : 20px;
+
 body { 
     background-repeat: no-repeat;
     height: 100%;
