--- a/app_documento/app/views/importadors/_form.html.erb
+++ b/app_documento/app/views/importadors/_form.html.erb
@@ -38,7 +38,7 @@
         <td></td>
         <td>
           <center>
-            <%= f.action :submit, :label => flash[:accion] %>
+            <%= f.action :submit, :label => flash[:accion], :button_html => { :disable_with => "Enviando..."} %>
           </center>
         </td>
       </tr>
