--- a/app_documento/app/views/registrations/new.html.erb
+++ b/app_documento/app/views/registrations/new.html.erb
@@ -52,7 +52,7 @@
     <%= f.select :admin, [['Cliente', 0 ], ['Admin', 1], ['Super-Admin', 2]] %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit, :disable_with => "Enviando..." %>
   </div>
 <% end %>
 <%= render "devise/shared/links" %>
