--- a/app_documento/app/views/requisitos/_form.html.erb
+++ b/app_documento/app/views/requisitos/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_field :tramite %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit, :disable_with => "Enviando..." %>
   </div>
 <% end %>
