--- a/app_documento/app/views/tramites/_form.html.erb
+++ b/app_documento/app/views/tramites/_form.html.erb
@@ -77,7 +77,7 @@
       
 
         <div style="margin-left:257px;margin-top:9px">
-          <%= f.submit :value => "Enviar solicitud", :class => "btn btn-default" %>
+          <%= f.submit :value => "Enviar solicitud", :class => "btn btn-default", :disable_with => "Enviando..." %>
         
           <button class="btn btn-default">
             <%= link_to 'Volver', :back %>
