--- a/app_documento/app/views/productos/index.html.erb
+++ b/app_documento/app/views/productos/index.html.erb
@@ -26,7 +26,9 @@
 <div class="span2">
   <table id="Tipo_prod" class="table table-hover table-striped table-bordered">
     <thead>
+    <div class="dataTables_scrollHead">
       <th>Tipo</th>
+  </div>
     </thead>
     <tbody>
       <tr>
@@ -47,8 +49,8 @@
     <%= f.input :alimento, :as => :hidden, :input_html => { :id => 'type_input' } %>
   <% end %>
 </div>
-<div id="marcas" class="span3">
-  <table class="table table-hover table-striped table-bordered">
+<div  class="span3">
+  <table cellpadding="0" cellspacing="0" border="0" id="marcas" class="table table-hover table-striped table-bordered">
     <thead>
       <th class="regisProd">Marcas</th>
     </thead>
@@ -67,7 +69,7 @@
   <% end %>
 </div>
 <div class="span3">
-  <table class="table table-hover table-striped table-bordered">
+  <table id="productos" class="table table-hover table-striped table-bordered">
     <thead>
       <th class="regisProd">Productos</th>
     </thead>
