--- a/app_documento/app/views/logsesions/index.html.erb
+++ b/app_documento/app/views/logsesions/index.html.erb
@@ -16,15 +16,24 @@
               <% if l.superu_id.nil? %>
                   <%= l.nsuperu %>
               <% else %>
-                  <%= link_to l.nsuperu, (Usuario.find(l.superu_id))%>
+                  <%= l.nsuperu %>
+                <!-- <%= link_to Usuario.find(l.superu_id) do %>
+                  <%= l.nsuperu %>
+                <% end %>-->
+
               <% end %>
             </td>
             <td style="width:300px">
               <% if l.usuario.nil? %>
                   <%= l.nusuario %>
               <% else %>
-                  <%= link_to l.nusuario, Usuario.find(l.usuario_id) %>
-              <% end %>
+                  <%= l.nusuario %>
+                <!-- <%= link_to (l.usuario) do %>
+                  <%= l.nusuario %>
+                <% end %> -->
+            <% end %>
+            
+              
             </td>
             <td style="width:80px;text-align: center;">
               <%= l.tipo %>
