--- a/app_documento/app/views/documentos/_form.html.erb
+++ b/app_documento/app/views/documentos/_form.html.erb
@@ -42,11 +42,11 @@
         </tr>
         <tr>
           <td>
-            <div id="presentacion_id">
+            <div id="presentacion_id_form">
               <%= f.input :presentacion_id, :as => :select, :collection => @presentaciones.map{|x| [x.empaque, x.id] },
                 :input_html => { :disable => true, :id => "presentacion_id_input" }, :label => "Presentación"%>
             </div>
-            <div id="importador_id">
+            <div id="importador_id_form">
               <%= f.input :importador_id, :as => :select, :collection => @importadores.map{|x| [x.nombre, x.id] },
                 :input_html => { :disable => true, :id => "importador_id_input" }, :label => "Importador" %>
             </div>
