--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -26,7 +26,7 @@
               <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown">
                 Alertas
-                <span class="badge serious-text"><%= session[:alerts].length %></span>
+                <span class="badge serious-text"><%= session[:alerts_length] %></span>
               </a>
               <ul class="dropdown-menu">
               <% session[:alerts].each do |a| %>
