--- a/app_documento/app/views/logtramite/index.html.erb
+++ b/app_documento/app/views/logtramite/index.html.erb
@@ -2,7 +2,7 @@
 <div class="span10">
 <h3>Registro Solicitudes</h3>
 <div>
-  <table class="table table-striped" id="tabla_show_log_tram">
+  <table class="table table-striped" id="tabla_log_tram">
     <thead>
       <th>Usuario</th>
       <th>Producto</th>
@@ -10,7 +10,6 @@
       <th style="text-align: center;">Acción</th>
       <th style="text-align: center;">Fecha</th>
     </thead>
-
     <tbody>
       <% @logtramites.each do |logtramite| %>
       <tr>
