--- a/app_documento/app/assets/stylesheets/application.css
+++ b/app_documento/app/assets/stylesheets/application.css
@@ -9,6 +9,10 @@
  *= require_tree .
 */
 
+body {
+    background-position:center;
+}
+
 * {
     font-family: 'segoe print';
 }
@@ -66,6 +70,14 @@ html>body div.tableContainer {
   z-index: 90;
   background-color: white;
 }
+
+
+
+/*Tablas de formularios*/
+.forms_tables td {
+  padding-right: 20px;
+}
+
 
 /*FONT*/
 
