--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -40,49 +40,52 @@
             </ul>
             </li>
 
-            <% when 1..2%>
-              <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown">Productos</a>
-              <ul class="dropdown-menu">
-                <li>
-                <%= link_to  'Nuevo producto', new_producto_path %>
+          <% when 1..2%>
+              <% if current_usuario.responsable or current_usuario.admin == 2%>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Productos</a>
+                <ul class="dropdown-menu">
+                  <li>
+                  <%= link_to  'Nuevo producto', new_producto_path %>
+                  </li>
+                  <li>
+                  <%= link_to  'Listar todos', productos_path %>
+                  </li>
+                </ul>
                 </li>
-                <li>
-                <%= link_to  'Listar todos', productos_path %>
+                <li><%= link_to  'Documentos', documentos_path%></li>
+                <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to  'Usuarios', logsesions_index_path %>
+                  </li>
+                  <li>
+                    <%= link_to  'Productos', logproductos_index_path %>
+                  </li>
+                  <li>
+                    <%= link_to  'Solicitudes', logtramite_index_path %>
+                  </li>
+                  <li>
+                    <%= link_to  'Documentos', logdocumento_index_path %>
+                  </li>
+                </ul>
                 </li>
-              </ul>
-              </li>
-
-              <li><%= link_to  'Solicitudes', tramites_path %></li>
-              <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown">Usuarios</a>
-              <ul class="dropdown-menu">
-                <li>
-                <%= link_to  'Nuevo usuario', new_usuario_path %>
+                <li><%= link_to  'Solicitudes', tramites_path %></li>
+              <% end %>
+              <% if current_usuario.admin == 2 %>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Usuarios</a>
+                <ul class="dropdown-menu">
+                  <li>
+                  <%= link_to  'Nuevo usuario', new_usuario_path %>
+                  </li>
+                  <li>
+                  <%= link_to  'Listar todos', usuarios_path %>
+                  </li>
+                </ul>
                 </li>
-                <li>
-                <%= link_to  'Listar todos', usuarios_path %>
-                </li>
-              </ul>
-              </li>
-              <li><%= link_to  'Documentos', documentos_path%></li>
-              <li class="dropdown">
-              <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
-              <ul class="dropdown-menu">
-                <li>
-                  <%= link_to  'Usuarios', logsesions_index_path %>
-                </li>
-                <li>
-                  <%= link_to  'Productos', logproductos_index_path %>
-                </li>
-                <li>
-                  <%= link_to  'Solicitudes', logtramite_index_path %>
-                </li>
-                <li>
-                  <%= link_to  'Documentos', logdocumento_index_path %>
-                </li>
-              </ul>
-              </li>
+              <% end %>
             <% end %>
           </ul>
         </div>
