--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -9,52 +9,84 @@
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to 'Inicio', home_path %></li>
+            <!-- Navegacion para clientes -->
             <% case current_usuario.admin
               when 0 %>
               <li><%= link_to  'Mis productos', productos_path %></li>
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Mis Solicitudes</a>
-              <ul class="dropdown-menu">
-                <li>
-                <%= link_to  'Nueva solicitud', new_tramite_path %>
-                </li>
-                <li>
-                <%= link_to  'Listar todas', tramites_path %>
-                </li>
-              </ul>
+                <ul class="dropdown-menu">
+                  <li> <%= link_to  'Nueva solicitud', new_tramite_path %> </li>
+                  <li> <%= link_to  'Listar todas', tramites_path %> </li>
+                </ul>
               </li>
               <li class="dropdown">
-              <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                Alertas
-                <span class="badge serious-text"><%= session[:alerts_length] %></span>
-              </a>
-              <ul class="dropdown-menu">
-              <% session[:alerts].each do |a| %>
-                <li><a>
-                <%= Producto.find(a.producto_id).nombre%> - <%= a.tipo%>
-              </a></li>
-              <% end %>
-              <li>
-              <%= link_to  'Ver todas', vencido_index_path %>
-              </li>
-            </ul>
-            </li>
-
-          <% when 1..2%>
-              <% if current_usuario.responsable or current_usuario.admin == 2%>
-                <li class="dropdown">
-                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Productos</a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                  Alertas
+                  <span class="badge serious-text"><%= session[:alerts_length] %></span>
+                </a>
                 <ul class="dropdown-menu">
-                  <li>
-                  <%= link_to  'Nuevo producto', new_producto_path %>
-                  </li>
-                  <li>
-                  <%= link_to  'Listar todos', productos_path %>
-                  </li>
-                </ul>
+                <% session[:alerts].each do |a| %>
+                  <li><a>
+                  <%= Producto.find(a.producto_id).nombre%> - <%= a.tipo%>
+                </a></li>
+                <% end %>
+                <li>
+                <%= link_to  'Ver todas', vencido_index_path %>
                 </li>
-                <li><%= link_to  'Documentos', documentos_path%></li>
+                </ul>
+            </li>
+            <!-- Navegacion para administradores (transcriptores y/o responsables-->
+            <% when 1 %>
+              <% if current_usuario.transcriptor and not current_usuario.responsable%>
+                <li><%= link_to "Nuevo expediente" %></li>
+                <li><%= link_to "Ver expediente" %></li>
+              <% else %>
+                <li><%= link_to  'Solicitudes pendientes', tramites_path %></li>
                 <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Expedientes</a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to  'Solicitar expendiente'%></li>
+                    <% if current_usuario.responsable and current_usuario.transcriptor %>
+                      <li><%= link_to "Nuevo expediente" %></li>
+                    <% else %>
+                      <li><%= link_to 'Ver todos' %></li>
+                    <% end %>
+                  </ul>
+                </li>
+                <li><%= link_to  'Ver documentos', documentos_path%></li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <%= link_to  'Usuarios', logsesions_index_path %>
+                    </li>
+                    <li>
+                      <%= link_to  'Solicitudes', logtramite_index_path %>
+                    </li>
+                  </ul>
+                </li>
+              <% end %>
+
+            <!-- Navegacion para super administradores-->
+            <% when 2%>
+              <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">Solicitudes</a>
+                <ul class="dropdown-menu">
+                  <li> <%= link_to  'Nueva solicitud', new_tramite_path %> </li>
+                  <li> <%= link_to  'Listar todas', tramites_path %> </li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Expedientes</a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to  'Solicitar expendiente'%></li>
+                    <li><%= link_to "Nuevo expediente" %></li>
+                    <li><%= link_to 'Ver todos' %></li>
+                  </ul>
+              </li>
+              <li><%= link_to  'Ver documentos', documentos_path%></li>
+              <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
                 <ul class="dropdown-menu">
                   <li>
@@ -70,12 +102,9 @@
                     <%= link_to  'Documentos', logdocumento_index_path %>
                   </li>
                 </ul>
-                </li>
-                <li><%= link_to  'Solicitudes', tramites_path %></li>
-              <% end %>
-              <% if current_usuario.admin == 2 %>
-                <li class="dropdown">
-                  <a href="" class="dropdown-toggle" data-toggle="dropdown">Usuarios</a>
+              </li>
+              <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">Usuarios</a>
                 <ul class="dropdown-menu">
                   <li>
                   <%= link_to  'Nuevo usuario', new_usuario_path %>
@@ -85,7 +114,6 @@
                   </li>
                 </ul>
                 </li>
-              <% end %>
             <% end %>
           </ul>
         </div>
