--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -9,9 +9,9 @@
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to 'Inicio', home_path %></li>
-            <!-- Navegacion para clientes -->
             <% case current_usuario.admin
               when 0 %>
+              <!-- Navegacion para clientes -->
               <li><%= link_to  'Mis productos', productos_path %></li>
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Mis Solicitudes</a>
@@ -36,10 +36,10 @@
                 </li>
                 </ul>
             </li>
-            <!-- Navegacion para administradores (transcriptores y/o responsables-->
             <% when 1 %>
+            <!-- Navegacion para administradores (transcriptores y/o responsables)-->
               <% if current_usuario.transcriptor and not current_usuario.responsable%>
-                <li><%= link_to "Nuevo expediente" %></li>
+                <li><%= link_to "Nuevo expediente", new_producto_path %></li>
                 <li><%= link_to "Ver expediente" %></li>
               <% else %>
                 <li><%= link_to  'Solicitudes pendientes', tramites_path %></li>
@@ -48,13 +48,14 @@
                   <ul class="dropdown-menu">
                     <li><%= link_to  'Solicitar expendiente'%></li>
                     <% if current_usuario.responsable and current_usuario.transcriptor %>
-                      <li><%= link_to "Nuevo expediente" %></li>
+                      <li><%= link_to "Nuevo expediente", new_producto_path %></li>
                     <% else %>
-                      <li><%= link_to 'Ver todos' %></li>
+                      <li><%= link_to 'Ver todos', productos_path %></li>
                     <% end %>
                   </ul>
                 </li>
                 <li><%= link_to  'Ver documentos', documentos_path%></li>
+                <li><%= link_to  'Ver usuarios', usuarios_path%></li>
                 <li class="dropdown">
                   <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
                   <ul class="dropdown-menu">
@@ -68,8 +69,8 @@
                 </li>
               <% end %>
 
-            <!-- Navegacion para super administradores-->
             <% when 2%>
+            <!-- Navegacion para super administradores-->
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Solicitudes</a>
                 <ul class="dropdown-menu">
@@ -81,8 +82,8 @@
                   <a href="" class="dropdown-toggle" data-toggle="dropdown">Expedientes</a>
                   <ul class="dropdown-menu">
                     <li><%= link_to  'Solicitar expendiente'%></li>
-                    <li><%= link_to "Nuevo expediente" %></li>
-                    <li><%= link_to 'Ver todos' %></li>
+                    <li><%= link_to "Nuevo expediente", new_producto_path %></li>
+                    <li><%= link_to 'Ver todos', productos_path %></li>
                   </ul>
               </li>
               <li><%= link_to  'Ver documentos', documentos_path%></li>
