--- a/app_documento/app/views/productos/show.html.erb
+++ b/app_documento/app/views/productos/show.html.erb
@@ -68,6 +68,7 @@
           Acciones
         </button>
         <ul class="dropdown-menu">
+          <li><%= link_to 'Agregar documentos', new_create_documentos_productos_path(:producto_id => @producto.id) %></li>
           <li><%= link_to 'Editar', edit_producto_path(@producto) %></li> 
           <li> 
           <a href="#" onclick="$('#hide-form').submit()">
