--- a/app_documento/app/views/usuarios/new_asignar_cliente.html.erb
+++ b/app_documento/app/views/usuarios/new_asignar_cliente.html.erb
@@ -4,12 +4,12 @@
   <h4>Usuario: <%= @usuario.login %> </h4>
   </br>
   </br>
-  <%= form_tag asignar_cliente_usuarios_path, :method => :post, :multiple => true do %>
-    <%= hidden_field_tag "responsable", @usuario.id%>
-    <ul style="list-style: none;" >
-      <li><%= select("cliente", "cliente0", options_from_collection_for_select(@clientes, "id", "compania")) %></li>
-      <li><%= submit_tag "Enviar", :html_button => { :disable_with => "Enviando..."}, :class => "btn btn-default"%></li>
-    </ul>
+  <%= nested_form_for @usuario do |f| %>
+    <%= f.fields_for :clientes do |u| %>
+      <%= u.hidden_tag :responsable_id, @usuario.id %>
+      <%= u.select(:cliente_id, options_from_collection_for_select(@clientes, "id", ":cliente_id,compania")) %>
+    <% end %>
+    <%= f.submit "Enviar", :class => "btn btn-default"%>
   <% end %>
 </div>
 <div class="span3"></div>
