--- a/app_documento/app/views/productos/new_create_documentos.html.erb
+++ b/app_documento/app/views/productos/new_create_documentos.html.erb
@@ -19,13 +19,14 @@
 <div class="span6">
   <h3>Documentación</h3>
   <h4>Expendiente: <%= @producto.nombre%></h4>
+  <p>Recuerde registrar las presentaciones e importadores antes de continuar</p>
   </br>
   <%= nested_form_for @producto do |f| %>
     <%= f.fields_for :documentos do |d| %>
       <div>
         <h5 style="text-decoration:underline;">Nuevo documento:</h5>
         <%= d.label :TipoDocumento_id, "Tipo" %>
-        <%= d.select :TipoDocumento_id, @tipos.map{|x| [x.descripcion, x.id]}, { },{ :class => "tipo_doc", :onchange => "agregarSelect(this)" }%>
+        <%= d.select :TipoDocumento_id, @tipos.map{|x| [x.descripcion, x.id]}.unshift(["Seleccione un tipo",""]), { }, { :class => "tipo_doc", :onchange => "agregarSelect(this)" }%>
         <%= d.link_to_remove "Eliminar" %>
         <div class="presentacion_div" style="display:none;">
           <% if not @presentaciones.empty? %>
@@ -33,7 +34,6 @@
               <%= d.select( :presentacion_id, @presentaciones.map{|x| [x.empaque, x.id] } ) %>
           <% else %>
             <p>No existen presentaciones asociadas a este producto</p>
-            <p>Si quieres regitrar una nueva haz click <%= link_to 'aqui', new_presentacion_path %> </p>
           <% end %>
         </div>
         <div class="importador_div" style="display:none;">
@@ -42,7 +42,6 @@
             <%= d.select( :importador_id, @importadores.map{|x| [x.nombre, x.id] } ) %>
           <% else %>
             <p>No existen importadores asociados a este producto</p>
-            <p>Si quieres regitrar uno nuevo haz click <%= link_to 'aqui', new_importador_path %> </p>
           <% end %>
         </div>
 
