--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -135,7 +135,7 @@
     <% if current_usuario.admin == 2 and current_usuario.login != @usuario.login %>
       <tr><td>
         <%= image_tag("/assets/assign.png", :class => "cos_icon", :title => "Asignar clientes")%>
-        <%= link_to 'Asignar clientes' %>
+        <%= link_to 'Asignar clientes', new_asignar_cliente_usuarios_path(@usuario.id) %>
       </td></tr>
     <tr>
       <td>
